[package]
name = "ctow"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["curl", "wget", "conversion"]
categories = ["command-line-utilities"]
description = "A simple rust binary utility to convert curl commands to wget commands."
repository = "https://github.com/Hoverth/ctow"
readme = "README.md"

